[b][color=orange]v4.26[/color], 23.07.2019[/b][list]
[*]Added Eternal Palace to Raid Progress on Tooltip.
[*]Changed Layout due to removal from Masque.
[*]Added S&L Merchant skin incompatibility check.
[*]Enable Cutaway Health on Player-/Target Frame.
[*]RaiderIO skin fix.

[b][color=orange]v4.25[/color], 15.07.2019[/b][list]
[*]Fixed a GMOTD PlaySoundFile.
[*]Fixed Enable Options for RaidCD.
[*]Removed SLE Armory Incompatibility check.[/list]

[b][color=orange]v4.24[/color], 04.07.2019[/b][list]
[*]Removed Talent Manager. Caused too many errors.
[*]Added new Wormhole Generators to LocPanel.
[*]Added PVPMatchUI skin.
[*]IMPORTANT: Updated my Layout to not block certain World Quest.
[*]Fixed some bugs with compatibility code -- Thx Nihilist
[*]Fixed Nameplate Castbar Shield option.[/list]

[b][color=orange]v4.23[/color], 26.06.2019[/b][list]
[*]Added new Flask to my RaidBuffReminder module.
[*]Added new Hearthstones to LocPanel.
[*]Updated Code with 8.2 changes.[/list]

[b][color=orange]v4.22[/color], 06.06.2019[/b][list]
[*]Updated compatibility with ElvUI_NihilisUI.
[*]Updated Enhanced Nameplate Auras to display the Player Name on CC Buffs, with help from Nihili <3
[*]Added new Font Expressway Bold and use it. (You need to run the Installer again)
[*]Small Layout update. (You need to run the Installer again) if you want it.[/list]

[b][color=orange]v4.21[/color], 01.06.2019[/b][list]
[*]Added new Tag: 'name:abbrev-translit'
[*]Return of the Enhanced Nameplate Auras. All Credits belong to: NihilisticPandemonium.
[*]Take account to the latest ElvUI_OptionsUI changes.[/list]

[b][color=orange]v4.20[/color], 22.05.2019[/b][list]
[*]Change the load order in the TOC file, hopefully this will fix the nil errors.
[*]Update the size for my changelog in game.
[*]Adjust nameplate settings in my install.[/list]

[b][color=orange]v4.19[/color], 18.05.2019[/b][list]
[*]Code improvements for Notifications.
[*]Disabled Call To Arms alert by default.