@@ -1,7 +1,6 @@
 ## Interface: 80200
 ## Author: Merathilis
-## X-Credits: Benik, Blazeflack, Azilroka, Simpy, Whiro, Darth Predator, fgprodigal, siweia, Solor, Elv & all AddOn Authors who inspired me.
-## Version: 4.26
+## Version: 4.27
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -10,8 +9,9 @@
 ## SavedVariables: MERData
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, AddOnSkins, BigWigs, ls_Toasts
-## X-ElvVersion: 11.19
-## X-Curse-Packaged-Version: 4.26
+## X-Credits: Benik, Blazeflack, Azilroka, Simpy, NihilisticPandemonium, Darth Predator, fgprodigal, siweia, Solor, Elv & all AddOn Authors who inspired me.
+## X-ElvVersion: 11.20
+## X-Curse-Packaged-Version: 4.27
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
