@@ -1,9 +1,15 @@
+[b][color=orange]v4.27[/color], 29.07.2019[/b][list]
+[*]Update some skins.
+[*]Update Azerite Armor Tooltip.
+[*]Hide the RaidManager during Pet Battles.
+[*]Removed WeakAuras Skin.[/list]
+
 [b][color=orange]v4.26[/color], 23.07.2019[/b][list]
 [*]Added Eternal Palace to Raid Progress on Tooltip.
 [*]Changed Layout due to removal from Masque.
 [*]Added S&L Merchant skin incompatibility check.
 [*]Enable Cutaway Health on Player-/Target Frame.
-[*]RaiderIO skin fix.
+[*]RaiderIO skin fix.[/list]
 
 [b][color=orange]v4.25[/color], 15.07.2019[/b][list]
 [*]Fixed a GMOTD PlaySoundFile.
